--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -502,7 +502,7 @@
                                                         <span class="glyphicon glyphicon-ok"/>
                                                     </td>
 
-                                                    <td>
+                                                    <td ng-hide="personageFlaw.personage_race_default && personageFlaw.Flaw.unremovable">
                                                         <a class="btn btn-link"
                                                            ng-click="deletePersonageFlaw(personageFlaw)">Удалить</a>
                                                     </td>
