--- a/public/views/attribute_manager.html
+++ b/public/views/attribute_manager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Список аттрибутов</title>
+    <title>Список атрибутов</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -24,11 +24,11 @@
 </div>
 
 <div class="container">
-    <h2>Добавить аттрибут</h2>
+    <h2>Добавить атрибут</h2>
     <form class="form-horizontal" role="form" ng-controller="addAttributeController"
           name="createAttributeForm">
         <div class="form-group">
-            <label class="control-label col-sm-2" for="attribute_name">Название аттрибута:</label>
+            <label class="control-label col-sm-2" for="attribute_name">Название атрибута:</label>
             <div class="col-sm-10">
                 <input type="text" ng-model="attribute_name" class="form-control" id="attribute_name" placeholder="Сила" required>
             </div>
