--- a/public/views/main-menu.html
+++ b/public/views/main-menu.html
@@ -8,7 +8,7 @@
         <div id="main_menu" class="panel-collapse collapse">
             <ul class="list-group">
                 <li class="list-group-item"><a href="/views/race_manager.html">Расы</a></li>
-                <li class="list-group-item"><a href="/views/attribute_manager.html">Аттрибуты</a></li>
+                <li class="list-group-item"><a href="/views/attribute_manager.html">Атрибуты</a></li>
                 <li class="list-group-item"><a href="/views/merit_manager.html">Достоинства</a></li>
                 <li class="list-group-item"><a href="/views/inherent_manager.html">Врожденные особенности</a></li>
                 <li class="list-group-item"><a href="/views/flaw_manager.html">Недостатки</a></li>
