--- a/public/views/main-menu.html
+++ b/public/views/main-menu.html
@@ -13,6 +13,7 @@
                 <li class="list-group-item"><a href="/views/inherent_manager.html">Врожденные особенности</a></li>
                 <li class="list-group-item"><a href="/views/flaw_manager.html">Недостатки</a></li>
                 <li class="list-group-item"><a href="/views/attached_skills_manager.html">Прикрепленные навыки</a></li>
+                <li class="list-group-item"><a href="/views/trigger_skills_manager.html">Тригерные навыки</a></li>
                 <li class="list-group-item"><a href="/">Персонажи</a></li>
             </ul>
         </div>
