ERILON-27 Чекбоксы при добавлении триггерного навыка не подписаны

--- a/public/views/attached_skills_manager.html
+++ b/public/views/attached_skills_manager.html
@@ -49,7 +49,7 @@
                 </div>
             </td>
             <td>
-                <button type="button" class="btn btn-link" ng-click="deleteAttachedSkill(attachedSkill.id)">Удалить
+                <button type="button" class="btn btn-link" ng-click="deleteAttachedSkill(attachedSkill.id)">х
                 </button>
             </td>
         </tr>
