--- a/public/views/index.html
+++ b/public/views/index.html
@@ -38,7 +38,7 @@
                     <ul class="dropdown-menu dropdown-menu-right">
                         <li><a href="/views/create_personage.html?id={{personage.id}}">Продолжить создание</a></li>
                         <li><a href="#">Редактировать</a></li>
-                        <li><a href="#" ng-click="deletePersonage(personage.id)">Удалить</a></li>
+                        <li><a href="#" ng-click="deletePersonage(personage.id)">х</a></li>
                     </ul>
                 </div>
             </td>
