--- a/public/views/race.html
+++ b/public/views/race.html
@@ -58,7 +58,7 @@
                 </div>
             </td>
             <td>
-                <a class="btn btn-link" ng-click="deleteRaceMerit(raceMerit.id)">Удалить</a>
+                <a class="btn btn-link" ng-click="deleteRaceMerit(raceMerit.id)">х</a>
             </td>
         </tr>
     </table>
@@ -117,7 +117,7 @@
             <td style="vertical-align:middle;">{{ raceInherent.Inherent.name}}</td>
             <td style="vertical-align:middle;">1/{{ raceInherent.race_probability }}</td>
             <td>
-                <a class="btn btn-link" ng-click="deleteRaceInherent(raceInherent.id)">Удалить</a>
+                <a class="btn btn-link" ng-click="deleteRaceInherent(raceInherent.id)">х</a>
             </td>
         </tr>
     </table>
@@ -166,7 +166,7 @@
             <td style="vertical-align:middle;">{{ raceFlaw.Flaw.name}}</td>
             <td style="vertical-align:middle;">{{ raceFlaw.race_probability }}</td>
             <td>
-                <a class="btn btn-link" ng-click="deleteRaceFlaw(raceFlaw.id)">Удалить</a>
+                <a class="btn btn-link" ng-click="deleteRaceFlaw(raceFlaw.id)">х</a>
             </td>
         </tr>
     </table>
