--- a/public/views/race_manager.html
+++ b/public/views/race_manager.html
@@ -22,7 +22,7 @@
             </td>
             <td style="vertical-align:middle;">{{ race.max_age }}</td>
             <td>
-                <a class="btn btn-link" ng-click="deleteRace(race.id)">Удалить</a>
+                <a class="btn btn-link" ng-click="deleteRace(race.id)">х</a>
             </td>
         </tr>
     </table>
