--- a/public/views/trigger_skill.html
+++ b/public/views/trigger_skill.html
@@ -28,7 +28,7 @@
             <td style="vertical-align:middle;">{{ skillLevel.level}}</td>
             <td style="vertical-align:middle;">{{ skillLevel.cost}}</td>
             <td>
-                <button type="button" class="btn btn-link" ng-click="deleteSkillLevel(skillLevel.id)">Удалить</button>
+                <button type="button" class="btn btn-link" ng-click="deleteSkillLevel(skillLevel.id)">х</button>
             </td>
         </tr>
     </table>
