--- a/public/views/trigger_skills_manager.html
+++ b/public/views/trigger_skills_manager.html
@@ -37,7 +37,7 @@
                 </div>
             </td>
             <td>
-                <button type="button" class="btn btn-link" ng-click="deleteTriggerSkill(triggerSkill.id)">Удалить
+                <button type="button" class="btn btn-link" ng-click="deleteTriggerSkill(triggerSkill.id)">х
                 </button>
             </td>
         </tr>
