--- a/public/views/flaw_manager.html
+++ b/public/views/flaw_manager.html
@@ -29,7 +29,7 @@
                     <span class="glyphicon glyphicon-ok"/>
                 </div>
             </td>
-            <td><button type="button" class="btn btn-link" ng-click="deleteFlaw(flaw.id)">Удалить</button></td>
+            <td><button type="button" class="btn btn-link" ng-click="deleteFlaw(flaw.id)">х</button></td>
         </tr>
     </table>
 </div>
