--- a/public/views/inherent_manager.html
+++ b/public/views/inherent_manager.html
@@ -21,7 +21,7 @@
             <td style="vertical-align:middle;">{{ inherent.min_limit}}</td>
             <td style="vertical-align:middle;">{{ inherent.max_limit }}</td>
             <td>
-                <button type="button" class="btn btn-link" ng-click="deleteInherent(inherent.id)">Удалить</button>
+                <button type="button" class="btn btn-link" ng-click="deleteInherent(inherent.id)">х</button>
             </td>
         </tr>
     </table>
