--- a/public/views/merit_manager.html
+++ b/public/views/merit_manager.html
@@ -19,7 +19,7 @@
             <td style="vertical-align:middle;">{{ merit.name }}</td>
             <td style="vertical-align:middle;">{{ merit.cost }}</td>
             <td>
-                <button type="button" class="btn btn-link" ng-click="deleteMerit(merit.id)">Удалить</button>
+                <button type="button" class="btn btn-link" ng-click="deleteMerit(merit.id)">х</button>
             </td>
         </tr>
     </table>
